# figure-manager

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  dvc.yaml  dvc_old.yaml  environment.yml  metrics.json  outputs.dvc  params.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.dvc/: config
.github/workflows/: ci.yaml  publish.yml  report.yaml
examples/: example_usage.ipynb
figure_manager/: __init__.py  figure_manager.py  plotter.py
notebooks/: example.ipynb  example_usage.ipynb
outputs/figures/: .gitignore
src/: produce_figures.py
src/figure_manager/: __init__.py  figure_manager.py  plotter.py
src/matpublib/: __init__.py  composer.py
src/matpublib/palettes/: deep.json
src/matpublib/styles/: default.json
src/utils/: find_project_root.py
tests/figure_manager/: test_figure_manager.py  test_plotter.py
tests/matpublib/: test_figure_manager.py  test_plotter.py
tests/utils/: test_utils.py
