[project]
name = "matpublib"
version = "0.1.0"
description = "Publication-quality Matplotlib figures with standardized sizing, LaTeX support, and subplot management."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Adam Hallengreen", email = "90259162+AdamHallengreen@users.noreply.github.com" }
]
keywords = ["matplotlib", "figures", "publication", "plotting", "scientific"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "polars-lts-cpu>=1.26.0 ; sys_platform == 'darwin'",
    "seaborn>=0.13.2",
]

[project.urls]
Repository = "https://github.com/AdamHallengreen/matpublib"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matpublib"]

[dependency-groups]
dev = [
    "dvc>=3.59.1",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.6",
    "notebook>=7.3.3",
    "pip>=25.0.1",
    "ty",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff]
# Also check for fixes that are unsafe to apply automatically.
unsafe-fixes = true

[tool.ty.environment]
python = ".venv"
